# servoshell

./: .gitignore  .gitmodules  Bundle.toml  Cargo.toml  Cartfile  HOW_TO_BUILD_FRAMEWORK  NOTES_PAUL  README.md  ServoShellApp.xib  build.rs  dotapp.sh  issues.txt  package.py  rust-toolchain  tests.md
macos/: Info.plist  ServoShell.sketch
macos/framework/MMTabBarView.framework/Headers/: MMAdiumTabStyle.h  MMAquaTabStyle.h  MMCardTabStyle.h  MMRolloverButton.h  MMRolloverButtonCell.h  MMSafariTabStyle.h  MMSlideButtonsAnimation.h  MMTabBarButtonCell.Private.h  MMTabBarButtonCell.h  MMTabDragAssistant.h  MMTabDragView.h  NSAffineTransform+MMTabBarViewExtensions.h  NSBezierPath+MMTabBarViewExtensions.h  NSString+MMTabBarViewExtensions.h  NSTabViewItem+MMTabBarViewExtensions.h
macos/framework/MMTabBarView.framework/Resources/: AquaTabClose_Front.tiff  AquaTabNew.tiff  SafariAWATClose.tiff  SafariAWATCloseRollover.tiff  SafariAWATLeftCap.tiff  SafariAWITCloseRollover.tiff  SafariAWITRightCap.tiff  SafariIWATCloseRollover.tiff  SafariIWITRightCap.tiff  TabClose_Front.tiff  TabClose_Front_Rollover.tiff  YosemiteTabClose_Front_Rollover.tiff
macos/xib/: App.xib  Window.xib
python/: mach_bootstrap.py
python/servo/: build_commands.py  command_base.py  package_commands.py
shell_resources/: home.html
shell_resources/icons/: ServoShell.icns
src/: app.rs  app_delegate.rs  browser.rs  commands.rs  controls.rs  events.rs  initgl.rs  logs.rs  main.old.rs  main.rs  my_window.rs  nib.rs  nswindow.rs  servo.rs  servo_wrapper.rs  servoengine.rs  servoview.rs  shell_window.rs  state.rs  ui.rs  view.rs  view_events.rs  widgets.rs  window.rs
src/platform/: cocoa.rs  mod.rs
src/platform/cocoa/: app.rs  bookmarks.rs  logs.rs  mod.rs  toolbar.rs  utils.rs  view.rs  window.rs
src/platform/cocoa/xib/: App.xib  Window.xib
src/platform/glutin/: app.rs  logs.rs  mod.rs  utils.rs  view.rs  window.rs
src/platform/macos/: app.rs  bookmarks.rs  commands.rs  controls.rs  logs.rs  mod.rs  servo_view.rs  toolbar.rs  utils.rs  view.rs  window.rs
src/platform/windows/: servoshell.exe.manifest
src/state/: app.rs  browser.rs  mod.rs  state.rs  tabs.rs  window.rs
src/traits/: app.rs  mod.rs  view.rs  window.rs
support/macos/: Info.plist.mako
support/windows/: ServoShell.wxs.mako
xib/: App.xib  ServoShellApp.xib  Window copy.xib  Window.xib
(+48 files in other folders)
