[package]
name = "servoshell"
version = "0.0.3"
authors = ["Paul Rouget <me@paulrouget.com>"]
description = "A basic servo-based browser"
build = "build.rs"

[dependencies]
gleam = "0.4"
open = "1.1.1"
log = "0.3"
libservo = { git = "https://github.com/servo/servo", rev = "e97f28e2a6" }
glutin = "0.9"
tinyfiledialogs = "2.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-foundation = "0.3"
core-graphics = "0.8"
cocoa = "^0.9.2"
cgl = "0.2"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.2"
user32-sys = "0.2"
gdi32-sys = "0.2"

[features]
force-glutin = []

[package.metadata.bundle]
identifier = "org.servo.servoshell"
icon = ["shell_resources/icons/32x32.png", "shell_resources/icons/128x128.png", "shell_resources/icons/128x128@2x.png"]
resources = ["servo_resources/", "shell_resources/", "target/nibs/"]
