[package]
name = "servoshell"
version = "0.1.0"
authors = ["Paul Rouget <me@paulrouget.com>"]
description = "A basic servo-based browser"
build = "build.rs"

[dependencies]
open = "1.1.1"
log = "0.3"
libservo = { git = "https://github.com/servo/servo", rev = "989d2fd532" }
glutin = "0.9"
tinyfiledialogs = "3.0"
treediff = { version = "2.5.3", features = ["with-serde-json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-foundation = "0.3"
core-graphics = "0.8"
cocoa = "^0.9.2"
cgl = "0.2"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.2"
user32-sys = "0.2"
gdi32-sys = "0.2"

[features]
force-glutin = []
